--- a/01_web/http-server/public/test.html
+++ b/01_web/http-server/public/test.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<form action="http://localhost:9999/messages.html" method="post">
-    <input name="Hello! It is Max"><br>
+<form action="http://localhost:9999/messages.html">
+    <input name="Name" value="Max"><br>
+    <input name="Surname" value="Nefedov"><br>
     <button>Send</button>
 </form>
 </body>
