Add POST body handler

--- a/01_web/http-server/public/test.html
+++ b/01_web/http-server/public/test.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="http://localhost:9999/messages.html">
+<form action="http://localhost:9999/messages.html" method="post">
     <input name="Name" value="Max"><br>
     <input name="Surname" value="Nefedov"><br>
     <button>Send</button>
