Add a lot of changes 2

--- a/01_web/http-server/public/getRequestTest.html
+++ b/01_web/http-server/public/getRequestTest.html
@@ -5,9 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="http://localhost:9999/messages.html" method="post">
-    <input name="Name" value="Max"><br>
-    <input name="Surname" value="Nefedov"><br>
+<form action="http://localhost:9999/index.html">
     <button>Send</button>
 </form>
 </body>
