--- a/01_web/http-server/public/multipart.html
+++ b/01_web/http-server/public/multipart.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Messages</title>
+    <title>Title</title>
 </head>
 <body>
-<p>Message in POST request is: {message}</p>
+<img src="data.jpg">
 </body>
 </html>
