--- a/01_web/http-server/public/getRequestQueryTest.html
+++ b/01_web/http-server/public/getRequestQueryTest.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="http://localhost:9999/messages.html" method="post">
+<form action="http://localhost:9999/index.html">
     <input name="Name" value="Max"><br>
     <input name="Surname" value="Nefedov"><br>
     <button>Send</button>
