--- a/01_web/http-server/public/postRequestMultipartTest.html
+++ b/01_web/http-server/public/postRequestMultipartTest.html
@@ -5,9 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<form action="http://localhost:9999/messages.html" method="post">
+<form action="http://localhost:9999/multipart.html" enctype="multipart/form-data" method="post">
     <input name="Name" value="Max"><br>
     <input name="Surname" value="Nefedov"><br>
+    <input type="file" name="image"><br>
     <button>Send</button>
 </form>
 </body>
